--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ ClientBin/
 Generated_Code/
 
 # Backup & report files from converting an old project file to a newer
-# Visual Studio version. Backup files are not needed, because we have git ;-)
+# Visual Studio version. Backup files are not needed, because we have git -)
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
